--- a/simple-webpage-nginx/values.yaml
+++ b/simple-webpage-nginx/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: elibukin/simple-webpage-nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.1"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
